Bug 506958 - Missing build requirement?
Summary: Missing build requirement?
Status: RESOLVED FIXED
Alias: None
Product: kcharselect
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.07.80
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-12 16:00 UTC by Steve Cossette
Modified: 2025-08-15 10:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Cossette 2025-07-12 16:00:06 UTC
When building the beta, I get the following error:

/builddir/build/BUILD/kcharselect-25.07.80-build/kcharselect-25.07.80/main.cc:13:10: fatal error: KIconTheme: No such file or directory
   13 | #include <KIconTheme>
      |          ^~~~~~~~~~~~
compilation terminated.

Now, I figured one of two things could be true:
1- KIconTheme IS needed, but is not included in the CMakeLists.txt file
2- KIconTheme IS NOT needed, but still being included somehow.

For now, I'll simply add kiconthemes as a build requirement, but I thought I'd report this to you.
Comment 1 Christoph Feck 2025-07-13 10:12:33 UTC
According to https://invent.kde.org/utilities/kcharselect/-/commit/6bf641875ec05c82d138374dac4cd8b3f2ea874c#note_1187862
this affects kiconthemes and kconfigwidgets.
Comment 2 Bug Janitor Service 2025-07-13 13:30:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kcharselect/-/merge_requests/31
Comment 3 Christoph Cullmann 2025-07-20 12:39:41 UTC
Git commit 51d483c6945f1f6c50b39c4e062cd47efce9dfe1 by Christoph Cullmann, on behalf of Nicolas Fella.
Committed on 20/07/2025 at 12:37.
Pushed by cullmann into branch 'master'.

Make KConfigWidgets and KIconThemes required

M  +5    -12   CMakeLists.txt
M  +0    -5    kcharselectdia.cc

https://invent.kde.org/utilities/kcharselect/-/commit/51d483c6945f1f6c50b39c4e062cd47efce9dfe1
Comment 4 Sune Vuorela 2025-08-15 10:22:37 UTC
Git commit 0f837224651968661ccd2518d02a77648c33d539 by Sune Vuorela.
Committed on 15/08/2025 at 10:06.
Pushed by sune into branch 'release/25.08'.

Make KConfigWidgets and KIconThemes required


(cherry picked from commit 51d483c6945f1f6c50b39c4e062cd47efce9dfe1)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +5    -12   CMakeLists.txt
M  +0    -5    kcharselectdia.cc

https://invent.kde.org/utilities/kcharselect/-/commit/0f837224651968661ccd2518d02a77648c33d539