Make KConfigWidgets and KIconThemes required

BUG: 506958